DOMOL/gramatica.output
Terminals unused in grammar

   NOT
   ENTONCES
   TRUE
   FALSE


Gramática

    0 $accept: programa $end

    1 programa: %empty
    2         | zona_variables zona_sensores zona_actuadores zona_estados zona_transiciones zona_comportamiento zona_casos

    3 zona_casos: inicio_zona_casos lista_casos

    4 inicio_zona_casos: CASOS '\n'

    5 lista_casos: caso_uso
    6            | lista_casos caso_uso

    7 caso_uso: CASO ID ':' l_estados '\n'
    8         | error '\n'

    9 l_estados: ID
   10          | l_estados ';' ID

   11 zona_comportamiento: inicio_zona_comportamiento lista_comportamientos

   12 inicio_zona_comportamiento: COMPORTAMIENTO '\n'

   13 lista_comportamientos: comportamiento_estado
   14                      | lista_comportamientos comportamiento_estado

   15 comportamiento_estado: inicio_comportamiento instruccion_basica ']' '\n'

   16 inicio_comportamiento: ID '[' '\n'
   17                      | error '\n'

   18 instruccion_basica: instrucion_actuador
   19                   | instruccion_variable
   20                   | instruccion_transicion
   21                   | lista_alternativas
   22                   | instruccion_basica instrucion_actuador
   23                   | instruccion_basica instruccion_variable
   24                   | instruccion_basica instruccion_transicion

   25 lista_alternativas: alternativa
   26                   | lista_alternativas alternativa

   27 alternativa: SI expr_logic '[' '\n' instruccion_basica ']' '\n'
   28            | SI expr_logic '[' '\n' instruccion_basica ']' '\n' alternativa_sino

   29 alternativa_sino: SINO '[' instruccion_basica ']' '\n'
   30                 | error '\n'

   31 instrucion_actuador: ACTIVAR ID '\n'
   32                    | DESACTIVAR ID '\n'

   33 instruccion_variable: ID '=' expr '\n'

   34 instruccion_transicion: TRANSICION ID '\n'

   35 zona_transiciones: inicio_zona_transiciones lista_transiciones

   36 inicio_zona_transiciones: TRANSICIONES '\n'

   37 lista_transiciones: transicion
   38                   | lista_transiciones transicion

   39 transicion: ID ':' ID MOV ID '\n'
   40           | error '\n'

   41 zona_estados: inicio_zona_estados lista_estados

   42 inicio_zona_estados: ESTADOS '\n'

   43 lista_estados: lista_estados estado
   44              | estado

   45 estado: ID '\n'
   46       | error '\n'

   47 zona_actuadores: inicio_zona_actuadores lista_actuadores

   48 inicio_zona_actuadores: ACTUADORES '\n'

   49 lista_actuadores: lista_actuadores actuador
   50                 | actuador

   51 actuador: ID '\n'
   52         | error '\n'

   53 zona_sensores: inico_zona_sensores lista_sensores

   54 inico_zona_sensores: SENSORES '\n'

   55 lista_sensores: lista_sensores linea_sensores
   56               | linea_sensores

   57 linea_sensores: sensores '\n'
   58               | error '\n'

   59 sensores: tipo ID
   60         | sensores ',' ID

   61 tipo: INT
   62     | FLOAT
   63     | BOOL

   64 zona_variables: inicio_zona_variables lista_variables

   65 inicio_zona_variables: VARIABLES '\n'

   66 lista_variables: lista_variables variable
   67                | variable

   68 variable: ID '=' expr '\n'
   69         | ID '=' expr_logic '\n'
   70         | error '\n'

   71 expr: NUMERO
   72     | REAL
   73     | ID
   74     | '-' expr
   75     | expr '+' expr
   76     | expr '-' expr
   77     | expr '*' expr
   78     | expr '/' expr
   79     | expr '%' expr
   80     | expr '^' expr
   81     | '(' expr ')'

   82 expr_logic: VERDADERO
   83           | FALSO
   84           | expr EQUAL expr
   85           | expr NOT_EQUAL expr
   86           | expr_logic EQUAL expr
   87           | expr_logic NOT_EQUAL expr
   88           | expr EQUAL expr_logic
   89           | expr NOT_EQUAL expr_logic
   90           | expr_logic EQUAL expr_logic
   91           | expr_logic NOT_EQUAL expr_logic
   92           | expr HT expr
   93           | expr HET expr
   94           | expr LT expr
   95           | expr LET expr
   96           | expr_logic AND expr_logic
   97           | expr_logic OR expr_logic
   98           | '(' expr_logic ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 4 7 8 12 15 16 17 27 28 29 30 31 32 33 34 36 39 40 42 45
    46 48 51 52 54 57 58 65 68 69 70
'%' (37) 79
'(' (40) 81 98
')' (41) 81 98
'*' (42) 77
'+' (43) 75
',' (44) 60
'-' (45) 74 76
'/' (47) 78
':' (58) 7 39
';' (59) 10
'=' (61) 33 68 69
'[' (91) 16 27 28 29
']' (93) 15 27 28 29
'^' (94) 80
error (256) 8 17 30 40 46 52 58 70
VARIABLES (258) 65
SENSORES (259) 54
ACTUADORES (260) 48
ESTADOS (261) 42
TRANSICIONES (262) 36
COMPORTAMIENTO (263) 12
MOV (264) 39
CASOS (265) 4
CASO (266) 7
HT (267) 92
HET (268) 93
LT (269) 94
LET (270) 95
AND (271) 96
OR (272) 97
NOT (273)
EQUAL (274) 84 86 88 90
NOT_EQUAL (275) 85 87 89 91
ID (276) 7 9 10 16 31 32 33 34 39 45 51 59 60 68 69 73
FLOAT (277) 62
INT (278) 61
BOOL (279) 63
SI (280) 27 28
SINO (281) 29
ACTIVAR (282) 31
DESACTIVAR (283) 32
TRANSICION (284) 34
ENTONCES (285)
NUMERO (286) 71
REAL (287) 72
TRUE (288)
FALSE (289)
VERDADERO (290) 82
FALSO (291) 83
MenosUnario (292)


No terminales con las reglas donde aparecen

$accept (53)
    en la izquierda: 0
programa (54)
    en la izquierda: 1 2, en la derecha: 0
zona_casos (55)
    en la izquierda: 3, en la derecha: 2
inicio_zona_casos (56)
    en la izquierda: 4, en la derecha: 3
lista_casos (57)
    en la izquierda: 5 6, en la derecha: 3 6
caso_uso (58)
    en la izquierda: 7 8, en la derecha: 5 6
l_estados (59)
    en la izquierda: 9 10, en la derecha: 7 10
zona_comportamiento (60)
    en la izquierda: 11, en la derecha: 2
inicio_zona_comportamiento (61)
    en la izquierda: 12, en la derecha: 11
lista_comportamientos (62)
    en la izquierda: 13 14, en la derecha: 11 14
comportamiento_estado (63)
    en la izquierda: 15, en la derecha: 13 14
inicio_comportamiento (64)
    en la izquierda: 16 17, en la derecha: 15
instruccion_basica (65)
    en la izquierda: 18 19 20 21 22 23 24, en la derecha: 15 22 23
    24 27 28 29
lista_alternativas (66)
    en la izquierda: 25 26, en la derecha: 21 26
alternativa (67)
    en la izquierda: 27 28, en la derecha: 25 26
alternativa_sino (68)
    en la izquierda: 29 30, en la derecha: 28
instrucion_actuador (69)
    en la izquierda: 31 32, en la derecha: 18 22
instruccion_variable (70)
    en la izquierda: 33, en la derecha: 19 23
instruccion_transicion (71)
    en la izquierda: 34, en la derecha: 20 24
zona_transiciones (72)
    en la izquierda: 35, en la derecha: 2
inicio_zona_transiciones (73)
    en la izquierda: 36, en la derecha: 35
lista_transiciones (74)
    en la izquierda: 37 38, en la derecha: 35 38
transicion (75)
    en la izquierda: 39 40, en la derecha: 37 38
zona_estados (76)
    en la izquierda: 41, en la derecha: 2
inicio_zona_estados (77)
    en la izquierda: 42, en la derecha: 41
lista_estados (78)
    en la izquierda: 43 44, en la derecha: 41 43
estado (79)
    en la izquierda: 45 46, en la derecha: 43 44
zona_actuadores (80)
    en la izquierda: 47, en la derecha: 2
inicio_zona_actuadores (81)
    en la izquierda: 48, en la derecha: 47
lista_actuadores (82)
    en la izquierda: 49 50, en la derecha: 47 49
actuador (83)
    en la izquierda: 51 52, en la derecha: 49 50
zona_sensores (84)
    en la izquierda: 53, en la derecha: 2
inico_zona_sensores (85)
    en la izquierda: 54, en la derecha: 53
lista_sensores (86)
    en la izquierda: 55 56, en la derecha: 53 55
linea_sensores (87)
    en la izquierda: 57 58, en la derecha: 55 56
sensores (88)
    en la izquierda: 59 60, en la derecha: 57 60
tipo (89)
    en la izquierda: 61 62 63, en la derecha: 59
zona_variables (90)
    en la izquierda: 64, en la derecha: 2
inicio_zona_variables (91)
    en la izquierda: 65, en la derecha: 64
lista_variables (92)
    en la izquierda: 66 67, en la derecha: 64 66
variable (93)
    en la izquierda: 68 69 70, en la derecha: 66 67
expr (94)
    en la izquierda: 71 72 73 74 75 76 77 78 79 80 81, en la derecha:
    33 68 74 75 76 77 78 79 80 81 84 85 86 87 88 89 92 93 94 95
expr_logic (95)
    en la izquierda: 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
    98, en la derecha: 27 28 69 86 87 88 89 90 91 96 97 98


State 0

    0 $accept: . programa $end

    VARIABLES  desplazar e ir al estado 1

    $default  reduce usando la regla 1 (programa)

    programa               ir al estado 2
    zona_variables         ir al estado 3
    inicio_zona_variables  ir al estado 4


State 1

   65 inicio_zona_variables: VARIABLES . '\n'

    '\n'  desplazar e ir al estado 5


State 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 6


State 3

    2 programa: zona_variables . zona_sensores zona_actuadores zona_estados zona_transiciones zona_comportamiento zona_casos

    SENSORES  desplazar e ir al estado 7

    zona_sensores        ir al estado 8
    inico_zona_sensores  ir al estado 9


State 4

   64 zona_variables: inicio_zona_variables . lista_variables

    error  desplazar e ir al estado 10
    ID     desplazar e ir al estado 11

    lista_variables  ir al estado 12
    variable         ir al estado 13


State 5

   65 inicio_zona_variables: VARIABLES '\n' .

    $default  reduce usando la regla 65 (inicio_zona_variables)


State 6

    0 $accept: programa $end .

    $default  aceptar


State 7

   54 inico_zona_sensores: SENSORES . '\n'

    '\n'  desplazar e ir al estado 14


State 8

    2 programa: zona_variables zona_sensores . zona_actuadores zona_estados zona_transiciones zona_comportamiento zona_casos

    ACTUADORES  desplazar e ir al estado 15

    zona_actuadores         ir al estado 16
    inicio_zona_actuadores  ir al estado 17


State 9

   53 zona_sensores: inico_zona_sensores . lista_sensores

    error  desplazar e ir al estado 18
    FLOAT  desplazar e ir al estado 19
    INT    desplazar e ir al estado 20
    BOOL   desplazar e ir al estado 21

    lista_sensores  ir al estado 22
    linea_sensores  ir al estado 23
    sensores        ir al estado 24
    tipo            ir al estado 25


State 10

   70 variable: error . '\n'

    '\n'  desplazar e ir al estado 26


State 11

   68 variable: ID . '=' expr '\n'
   69         | ID . '=' expr_logic '\n'

    '='  desplazar e ir al estado 27


State 12

   64 zona_variables: inicio_zona_variables lista_variables .
   66 lista_variables: lista_variables . variable

    error  desplazar e ir al estado 10
    ID     desplazar e ir al estado 11

    SENSORES  reduce usando la regla 64 (zona_variables)

    variable  ir al estado 28


State 13

   67 lista_variables: variable .

    $default  reduce usando la regla 67 (lista_variables)


State 14

   54 inico_zona_sensores: SENSORES '\n' .

    $default  reduce usando la regla 54 (inico_zona_sensores)


State 15

   48 inicio_zona_actuadores: ACTUADORES . '\n'

    '\n'  desplazar e ir al estado 29


State 16

    2 programa: zona_variables zona_sensores zona_actuadores . zona_estados zona_transiciones zona_comportamiento zona_casos

    ESTADOS  desplazar e ir al estado 30

    zona_estados         ir al estado 31
    inicio_zona_estados  ir al estado 32


State 17

   47 zona_actuadores: inicio_zona_actuadores . lista_actuadores

    error  desplazar e ir al estado 33
    ID     desplazar e ir al estado 34

    lista_actuadores  ir al estado 35
    actuador          ir al estado 36


State 18

   58 linea_sensores: error . '\n'

    '\n'  desplazar e ir al estado 37


State 19

   62 tipo: FLOAT .

    $default  reduce usando la regla 62 (tipo)


State 20

   61 tipo: INT .

    $default  reduce usando la regla 61 (tipo)


State 21

   63 tipo: BOOL .

    $default  reduce usando la regla 63 (tipo)


State 22

   53 zona_sensores: inico_zona_sensores lista_sensores .
   55 lista_sensores: lista_sensores . linea_sensores

    error  desplazar e ir al estado 18
    FLOAT  desplazar e ir al estado 19
    INT    desplazar e ir al estado 20
    BOOL   desplazar e ir al estado 21

    ACTUADORES  reduce usando la regla 53 (zona_sensores)

    linea_sensores  ir al estado 38
    sensores        ir al estado 24
    tipo            ir al estado 25


State 23

   56 lista_sensores: linea_sensores .

    $default  reduce usando la regla 56 (lista_sensores)


State 24

   57 linea_sensores: sensores . '\n'
   60 sensores: sensores . ',' ID

    '\n'  desplazar e ir al estado 39
    ','   desplazar e ir al estado 40


State 25

   59 sensores: tipo . ID

    ID  desplazar e ir al estado 41


State 26

   70 variable: error '\n' .

    $default  reduce usando la regla 70 (variable)


State 27

   68 variable: ID '=' . expr '\n'
   69         | ID '=' . expr_logic '\n'

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 49
    expr_logic  ir al estado 50


State 28

   66 lista_variables: lista_variables variable .

    $default  reduce usando la regla 66 (lista_variables)


State 29

   48 inicio_zona_actuadores: ACTUADORES '\n' .

    $default  reduce usando la regla 48 (inicio_zona_actuadores)


State 30

   42 inicio_zona_estados: ESTADOS . '\n'

    '\n'  desplazar e ir al estado 51


State 31

    2 programa: zona_variables zona_sensores zona_actuadores zona_estados . zona_transiciones zona_comportamiento zona_casos

    TRANSICIONES  desplazar e ir al estado 52

    zona_transiciones         ir al estado 53
    inicio_zona_transiciones  ir al estado 54


State 32

   41 zona_estados: inicio_zona_estados . lista_estados

    error  desplazar e ir al estado 55
    ID     desplazar e ir al estado 56

    lista_estados  ir al estado 57
    estado         ir al estado 58


State 33

   52 actuador: error . '\n'

    '\n'  desplazar e ir al estado 59


State 34

   51 actuador: ID . '\n'

    '\n'  desplazar e ir al estado 60


State 35

   47 zona_actuadores: inicio_zona_actuadores lista_actuadores .
   49 lista_actuadores: lista_actuadores . actuador

    error  desplazar e ir al estado 33
    ID     desplazar e ir al estado 34

    ESTADOS  reduce usando la regla 47 (zona_actuadores)

    actuador  ir al estado 61


State 36

   50 lista_actuadores: actuador .

    $default  reduce usando la regla 50 (lista_actuadores)


State 37

   58 linea_sensores: error '\n' .

    $default  reduce usando la regla 58 (linea_sensores)


State 38

   55 lista_sensores: lista_sensores linea_sensores .

    $default  reduce usando la regla 55 (lista_sensores)


State 39

   57 linea_sensores: sensores '\n' .

    $default  reduce usando la regla 57 (linea_sensores)


State 40

   60 sensores: sensores ',' . ID

    ID  desplazar e ir al estado 62


State 41

   59 sensores: tipo ID .

    $default  reduce usando la regla 59 (sensores)


State 42

   73 expr: ID .

    $default  reduce usando la regla 73 (expr)


State 43

   71 expr: NUMERO .

    $default  reduce usando la regla 71 (expr)


State 44

   72 expr: REAL .

    $default  reduce usando la regla 72 (expr)


State 45

   82 expr_logic: VERDADERO .

    $default  reduce usando la regla 82 (expr_logic)


State 46

   83 expr_logic: FALSO .

    $default  reduce usando la regla 83 (expr_logic)


State 47

   74 expr: '-' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 64


State 48

   81 expr: '(' . expr ')'
   98 expr_logic: '(' . expr_logic ')'

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 65
    expr_logic  ir al estado 66


State 49

   68 variable: ID '=' expr . '\n'
   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   84 expr_logic: expr . EQUAL expr
   85           | expr . NOT_EQUAL expr
   88           | expr . EQUAL expr_logic
   89           | expr . NOT_EQUAL expr_logic
   92           | expr . HT expr
   93           | expr . HET expr
   94           | expr . LT expr
   95           | expr . LET expr

    HT         desplazar e ir al estado 67
    HET        desplazar e ir al estado 68
    LT         desplazar e ir al estado 69
    LET        desplazar e ir al estado 70
    EQUAL      desplazar e ir al estado 71
    NOT_EQUAL  desplazar e ir al estado 72
    '+'        desplazar e ir al estado 73
    '-'        desplazar e ir al estado 74
    '*'        desplazar e ir al estado 75
    '/'        desplazar e ir al estado 76
    '%'        desplazar e ir al estado 77
    '^'        desplazar e ir al estado 78
    '\n'       desplazar e ir al estado 79


State 50

   69 variable: ID '=' expr_logic . '\n'
   86 expr_logic: expr_logic . EQUAL expr
   87           | expr_logic . NOT_EQUAL expr
   90           | expr_logic . EQUAL expr_logic
   91           | expr_logic . NOT_EQUAL expr_logic
   96           | expr_logic . AND expr_logic
   97           | expr_logic . OR expr_logic

    AND        desplazar e ir al estado 80
    OR         desplazar e ir al estado 81
    EQUAL      desplazar e ir al estado 82
    NOT_EQUAL  desplazar e ir al estado 83
    '\n'       desplazar e ir al estado 84


State 51

   42 inicio_zona_estados: ESTADOS '\n' .

    $default  reduce usando la regla 42 (inicio_zona_estados)


State 52

   36 inicio_zona_transiciones: TRANSICIONES . '\n'

    '\n'  desplazar e ir al estado 85


State 53

    2 programa: zona_variables zona_sensores zona_actuadores zona_estados zona_transiciones . zona_comportamiento zona_casos

    COMPORTAMIENTO  desplazar e ir al estado 86

    zona_comportamiento         ir al estado 87
    inicio_zona_comportamiento  ir al estado 88


State 54

   35 zona_transiciones: inicio_zona_transiciones . lista_transiciones

    error  desplazar e ir al estado 89
    ID     desplazar e ir al estado 90

    lista_transiciones  ir al estado 91
    transicion          ir al estado 92


State 55

   46 estado: error . '\n'

    '\n'  desplazar e ir al estado 93


State 56

   45 estado: ID . '\n'

    '\n'  desplazar e ir al estado 94


State 57

   41 zona_estados: inicio_zona_estados lista_estados .
   43 lista_estados: lista_estados . estado

    error  desplazar e ir al estado 55
    ID     desplazar e ir al estado 56

    TRANSICIONES  reduce usando la regla 41 (zona_estados)

    estado  ir al estado 95


State 58

   44 lista_estados: estado .

    $default  reduce usando la regla 44 (lista_estados)


State 59

   52 actuador: error '\n' .

    $default  reduce usando la regla 52 (actuador)


State 60

   51 actuador: ID '\n' .

    $default  reduce usando la regla 51 (actuador)


State 61

   49 lista_actuadores: lista_actuadores actuador .

    $default  reduce usando la regla 49 (lista_actuadores)


State 62

   60 sensores: sensores ',' ID .

    $default  reduce usando la regla 60 (sensores)


State 63

   81 expr: '(' . expr ')'

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 96


State 64

   74 expr: '-' expr .
   75     | expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr

    $default  reduce usando la regla 74 (expr)


State 65

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   81     | '(' expr . ')'
   84 expr_logic: expr . EQUAL expr
   85           | expr . NOT_EQUAL expr
   88           | expr . EQUAL expr_logic
   89           | expr . NOT_EQUAL expr_logic
   92           | expr . HT expr
   93           | expr . HET expr
   94           | expr . LT expr
   95           | expr . LET expr

    HT         desplazar e ir al estado 67
    HET        desplazar e ir al estado 68
    LT         desplazar e ir al estado 69
    LET        desplazar e ir al estado 70
    EQUAL      desplazar e ir al estado 71
    NOT_EQUAL  desplazar e ir al estado 72
    '+'        desplazar e ir al estado 73
    '-'        desplazar e ir al estado 74
    '*'        desplazar e ir al estado 75
    '/'        desplazar e ir al estado 76
    '%'        desplazar e ir al estado 77
    '^'        desplazar e ir al estado 78
    ')'        desplazar e ir al estado 97


State 66

   86 expr_logic: expr_logic . EQUAL expr
   87           | expr_logic . NOT_EQUAL expr
   90           | expr_logic . EQUAL expr_logic
   91           | expr_logic . NOT_EQUAL expr_logic
   96           | expr_logic . AND expr_logic
   97           | expr_logic . OR expr_logic
   98           | '(' expr_logic . ')'

    AND        desplazar e ir al estado 80
    OR         desplazar e ir al estado 81
    EQUAL      desplazar e ir al estado 82
    NOT_EQUAL  desplazar e ir al estado 83
    ')'        desplazar e ir al estado 98


State 67

   92 expr_logic: expr HT . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 99


State 68

   93 expr_logic: expr HET . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 100


State 69

   94 expr_logic: expr LT . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 101


State 70

   95 expr_logic: expr LET . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 102


State 71

   84 expr_logic: expr EQUAL . expr
   88           | expr EQUAL . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 103
    expr_logic  ir al estado 104


State 72

   85 expr_logic: expr NOT_EQUAL . expr
   89           | expr NOT_EQUAL . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 105
    expr_logic  ir al estado 106


State 73

   75 expr: expr '+' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 107


State 74

   76 expr: expr '-' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 108


State 75

   77 expr: expr '*' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 109


State 76

   78 expr: expr '/' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 110


State 77

   79 expr: expr '%' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 111


State 78

   80 expr: expr '^' . expr

    ID      desplazar e ir al estado 42
    NUMERO  desplazar e ir al estado 43
    REAL    desplazar e ir al estado 44
    '-'     desplazar e ir al estado 47
    '('     desplazar e ir al estado 63

    expr  ir al estado 112


State 79

   68 variable: ID '=' expr '\n' .

    $default  reduce usando la regla 68 (variable)


State 80

   96 expr_logic: expr_logic AND . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 113
    expr_logic  ir al estado 114


State 81

   97 expr_logic: expr_logic OR . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 113
    expr_logic  ir al estado 115


State 82

   86 expr_logic: expr_logic EQUAL . expr
   90           | expr_logic EQUAL . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 116
    expr_logic  ir al estado 117


State 83

   87 expr_logic: expr_logic NOT_EQUAL . expr
   91           | expr_logic NOT_EQUAL . expr_logic

    ID         desplazar e ir al estado 42
    NUMERO     desplazar e ir al estado 43
    REAL       desplazar e ir al estado 44
    VERDADERO  desplazar e ir al estado 45
    FALSO      desplazar e ir al estado 46
    '-'        desplazar e ir al estado 47
    '('        desplazar e ir al estado 48

    expr        ir al estado 118
    expr_logic  ir al estado 119


State 84

   69 variable: ID '=' expr_logic '\n' .

    $default  reduce usando la regla 69 (variable)


State 85

   36 inicio_zona_transiciones: TRANSICIONES '\n' .

    $default  reduce usando la regla 36 (inicio_zona_transiciones)


State 86

   12 inicio_zona_comportamiento: COMPORTAMIENTO . '\n'

    '\n'  desplazar e ir al estado 120


State 87

    2 programa: zona_variables zona_sensores zona_actuadores zona_estados zona_transiciones zona_comportamiento . zona_casos

    CASOS  desplazar e ir al estado 121

    zona_casos         ir al estado 122
    inicio_zona_casos  ir al estado 123


State 88

   11 zona_comportamiento: inicio_zona_comportamiento . lista_comportamientos

    error  desplazar e ir al estado 124
    ID     desplazar e ir al estado 125

    lista_comportamientos  ir al estado 126
    comportamiento_estado  ir al estado 127
    inicio_comportamiento  ir al estado 128


State 89

   40 transicion: error . '\n'

    '\n'  desplazar e ir al estado 129


State 90

   39 transicion: ID . ':' ID MOV ID '\n'

    ':'  desplazar e ir al estado 130


State 91

   35 zona_transiciones: inicio_zona_transiciones lista_transiciones .
   38 lista_transiciones: lista_transiciones . transicion

    error  desplazar e ir al estado 89
    ID     desplazar e ir al estado 90

    COMPORTAMIENTO  reduce usando la regla 35 (zona_transiciones)

    transicion  ir al estado 131


State 92

   37 lista_transiciones: transicion .

    $default  reduce usando la regla 37 (lista_transiciones)


State 93

   46 estado: error '\n' .

    $default  reduce usando la regla 46 (estado)


State 94

   45 estado: ID '\n' .

    $default  reduce usando la regla 45 (estado)


State 95

   43 lista_estados: lista_estados estado .

    $default  reduce usando la regla 43 (lista_estados)


State 96

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   81     | '(' expr . ')'

    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78
    ')'  desplazar e ir al estado 97


State 97

   81 expr: '(' expr ')' .

    $default  reduce usando la regla 81 (expr)


State 98

   98 expr_logic: '(' expr_logic ')' .

    $default  reduce usando la regla 98 (expr_logic)


State 99

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   92 expr_logic: expr HT expr .

    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78

    $default  reduce usando la regla 92 (expr_logic)


State 100

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   93 expr_logic: expr HET expr .

    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78

    $default  reduce usando la regla 93 (expr_logic)


State 101

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   94 expr_logic: expr LT expr .

    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78

    $default  reduce usando la regla 94 (expr_logic)


State 102

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   95 expr_logic: expr LET expr .

    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78

    $default  reduce usando la regla 95 (expr_logic)


State 103

   75 expr: expr . '+' expr
   76     | expr . '-' expr
   77     | expr . '*' expr
   78     | expr . '/' expr
   79     | expr . '%' expr
   80     | expr . '^' expr
   84 expr_logic: expr . EQUAL expr
   84           | expr EQUAL expr .
   85           | expr . NOT_EQUAL expr
   88           | expr . EQUAL expr_logic
   89           | expr . NOT_EQUAL expr_logic
   92           | expr . HT expr
   93           | expr . HET expr
   94           | expr . LT expr
   95           | expr . LET expr

    HT   desplazar e ir al estado 67
    HET  desplazar e ir al estado 68
    LT   desplazar e ir al estado 69
    LET  desplazar e ir al estado 70
    '+'  desplazar e ir al estado 73
    '-'  desplazar e ir al estado 74
    '*'  desplazar e ir al estado 75
    '/'  desplazar e ir al estado 76
    '%'  desplazar e ir al estado 77
    '^'  desplazar e ir al estado 78

    $default  reduce usando la regla 84 (expr_logic)


State 104
